--- a/bookweb-client/src/app/books-web-footer.component.html
+++ b/bookweb-client/src/app/books-web-footer.component.html
@@ -1,1 +1,5 @@
-<div class='footer'>&copy;vivek@conceptarchitect.in</div>
+
+
+<div class='footer'>
+    &copy; <a href='http://www.conceptarchitect.in'>Concept Architect</a>
+</div>
