--- a/bookweb-client/src/app/books-web-header.component.css
+++ b/bookweb-client/src/app/books-web-header.component.css
@@ -1,15 +1,32 @@
-h1{
-    font-size:3m;
+
+.header h1, .title{
+    font-size:3em;
     text-shadow: -3px -3px 3px gray;
 }
-p{
-    color:gray;
-    font-style: italic;
-    padding:0px;
-    margin-bottom: 0px;
+
+.form-field{
+    
+    display:block;
 }
 
-.header{
-    border-bottom: 1px solid gray;
-    padding-bottom:0px;
+.biography{
+    font-size:1.5em;
+    font-style:italic;
 }
+
+.author-image{
+    max-width: 350px;
+    width:350px;
+    border:15px solid maroon;
+    box-shadow: -5px -5px 5px gray;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: blue;
+    color: white;
+    text-align: center;
+ }
