--- a/bookweb-client/src/app/books-web-header.component.html
+++ b/bookweb-client/src/app/books-web-header.component.html
@@ -44,6 +44,8 @@
 
 <div class='main-content'>
 
-    <h1 class='title'>Welcome to our web site</h1>
+    <h1 class='title'>{{title}}</h1>
+    <p>{{subTitle }} | {{time}}</p>
+    
 
 </div>
