--- a/booksweb-client/src/app/book-list/book-list.component.html
+++ b/booksweb-client/src/app/book-list/book-list.component.html
@@ -8,8 +8,7 @@
         <tr>
             <th *ngIf='showImages'>
                 Poster
-                <input type='button' value='+' (click)='increaseSize()'>
-                <input type='button' value='-' (click)='decreaseSize()'>
+                <ca-range></ca-range>
             </th>
             <th>Title</th>
             <th>Author</th>
@@ -28,7 +27,13 @@
             <td>{{book.title}}</td>
             <td>{{book. author}}</td>
             <td>{{book.price}}</td>
-            <td>{{book.rating}}</td>
+            
+            <td>
+              
+                <rating></rating>
+                
+
+            </td>
         </tr>
      
         
