--- a/booksweb-client/src/app/book-info/book-info.component.html
+++ b/booksweb-client/src/app/book-info/book-info.component.html
@@ -4,7 +4,7 @@
 <div class='row'>
 
     <div class="col-md-6">
-        <img src='{{book.cover}}' class='cover-image' />
+        <img src='{{book.cover|altvalue:book.bookId|prefix:"/assets/images/books/"}}' class='cover-image' />
     </div>
     
     <div class="col-md-6">
