--- a/booksweb-client/src/app/book-composite/book-composite.component.html
+++ b/booksweb-client/src/app/book-composite/book-composite.component.html
@@ -8,6 +8,7 @@
         <ul class="list-group">
             <li *ngFor='let book of books' 
                 class="list-group-item list-group-item-action"
+                [ngClass]="{'active': book===selectedBook}"
                 (click)='selectBook(book)'
                 >
                 {{book.title|uppercase}}
